<resources>
    <string name="app_name">MomentZ</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="Logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_greet">Hello Again!</string>
    <string name="login_caption">Login to your account!</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="or_with">Or with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_account_let_s">Don’t have account? Let’s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create Your Account!</string>
    <string name="join_us_and_share_your_moment">Join us and share your moment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="choose_your_photo">Choose Your Photo!</string>
    <string name="profile_photo_caption_1">Be yourself; everyone else is already taken.</string>
    <string name="name">Name</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="agreement_desc">By continuing, I agree to MomentZ\'s Terms of Service. I also consent to the use of my app usage data to improve MomentZ and the relevancy of advertising campaigns for the app. See our Privacy Policy for more information</string>
    <string name="agree_terms">I agree to terms and conditions</string>
    <string name="camera">Camera</string>
    <string name="choose_method">Choose Method</string>
    <string name="file_manager">File Manager</string>
    <string name="field_cant_empty">"This field cannot be empty!"</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_post">Post</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="title_activity_follows">FollowsActivity</string>

    <string name="follow_tab_text_1">Followers</string>
    <string name="follow_tab_text_2">Followings</string>

    <string name="notification_tab_text_1">Like</string>
    <string name="notification_tab_text_2">Comment</string>
    <string name="notification_tab_text_3">Follow</string>
    <string name="like">Like</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="your_activity">Your activity</string>
    <string name="choose_image_source">Choose Image Source</string>
    <string name="delete">Delete</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="following">Following</string>
    <string name="activity">Activity</string>
    <string name="time">Time</string>
    <string name="notification">Notification</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="liked_your_post">liked your post</string>
    <string name="start_follow_you">started follow you</string>
    <string name="commented_on_your_post">commented on your post</string>
    <string name="comment">Comment</string>
    <string name="search">Search...</string>
    <string name="caption">caption post</string>
    <string name="chat">Chat</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="_10_00">10:00</string>
    <string name="user_icon">User Icon</string>
    <string name="gallery">Gallery</string>
    <string name="post_caption">Caption</string>
    <string name="post">Post</string>
    <string name="upload_location">Add Location</string>
    <string name="tv_comment">comment</string>
    <string name="post_comment">post</string>
    <string name="text_comment">comment</string>

    <!--    <string name="title_menu_1">Let\'s connect!</string>-->
    <!--    <string name="title_menu_2">Location Based</string>-->
    <!--    <string name="title_menu_3">Get started!</string>-->

    <string name="title_menu_1">Let\'s connect!</string>
    <string name="title_menu_2">Location Based Post!</string>
    <string name="title_menu_3">Keep Connect!</string>
    <string name="title_menu_4">Start!</string>
    <string name="desc_menu_1">Connect with people around the world.</string>
    <string name="desc_menu_2">Show your friend where you are, share everytime, everywhere.</string>
    <string name="desc_menu_3">Keep connect with your friend</string>
    <string name="desc_menu_4">Start Your Journey!</string>

    <string name="timeline_map">TimelineMap</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

</resources>