<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/login_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_greet"
        android:shadowColor="@android:color/transparent"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_caption"
        android:shadowColor="@android:color/transparent"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textColor="@color/dark_gray"/>

    <com.kai.momentz.customview.LoginInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/light_gray"
        android:textColorHighlight="@color/black"/>

    <com.kai.momentz.customview.LoginInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/light_gray"
        android:textColorHighlight="@color/black"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:shadowColor="@android:color/transparent"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:layout_marginBottom="25dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"/>

    <com.kai.momentz.customview.DefaultButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/or_with"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:shadowColor="@android:color/transparent"
            android:text="@string/or_with"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.kai.momentz.customview.SingleSignOnButton
        android:id="@+id/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_with_google" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        >

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account_let_s"
            android:shadowColor="@android:color/transparent"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="25dp"
            />

        <TextView
            android:id="@+id/lets_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:shadowColor="@android:color/transparent"
            android:textSize="14sp"
            android:textColor="@color/primary"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@id/dont_have_account"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="invisible" />

</LinearLayout>