<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".view.register.RegisterFragment">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <com.kai.momentz.customview.DefaultButton
            android:id="@+id/back"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/baseline_arrow_back_24"
            android:drawablePadding="8dp"
            android:shadowColor="@android:color/transparent" />

        <TextView
            android:id="@+id/login_greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:shadowColor="@android:color/transparent"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_us_and_share_your_moment"
            android:shadowColor="@android:color/transparent"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:textColor="@color/dark_gray"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_perm_contact_calendar_24"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"
            android:inputType="textPassword"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/agreement_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/agree_terms" />

        <TextView
            android:id="@+id/agreement_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agreement_desc"
            android:shadowColor="@android:color/transparent"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:textColor="@color/dark_gray"/>

        <com.kai.momentz.customview.DefaultButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/baseline_chevron_right_24"/>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="invisible"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
