<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".view.register.ProfileImageFragment">


    <TextView
        android:id="@+id/login_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_photo"
        android:shadowColor="@android:color/transparent"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_photo_caption_1"
        android:shadowColor="@android:color/transparent"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textColor="@color/dark_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePicture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_picture"
            app:contentPadding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="#00BCD4"
            app:strokeWidth="1dp" />


        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="24dp"
            android:padding="5dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/edit_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <com.kai.momentz.customview.DefaultButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:shadowColor="@android:color/transparent"
        android:textSize="16sp"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/baseline_chevron_right_24"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="invisible"
        android:layout_gravity="center"/>

</LinearLayout>