<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".view.profile.EditProfileFragment"
    android:padding="20dp">

    <com.kai.momentz.customview.DefaultButton
        android:id="@+id/back"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/baseline_arrow_back_24_white"
        android:drawablePadding="8dp"
        android:shadowColor="@android:color/transparent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/profile_picture"
                app:contentPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/Circular"
                app:strokeColor="#00BCD4"
                app:strokeWidth="1dp" />

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="24dp"
                android:padding="5dp"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/edit_photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_perm_contact_calendar_24"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.LoginInputEditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:drawableStart="@drawable/baseline_article_24"
            android:drawablePadding="10dp"
            android:hint="@string/bio"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textColorHighlight="@color/black"/>

        <com.kai.momentz.customview.DefaultButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="invisible"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>